[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
cita_trie = { git = "https://github.com/severiano-sisneros/cita_trie.git", version = "5.0.0" }
hasher = "0.1.4"
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"] }